--- a/catalog.html
+++ b/catalog.html
@@ -6,17 +6,17 @@
     </head>
     <body>
         <header class="main-header">
-            <nav class="main-navigation">
+            <nav class="main-navigation" aria-label="Главная навигация">
                 <a class="main-header-logo" href="index.html">
                 <img src="img\svg\logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
                 </a>
                 <ul class="site-navigation">
                     <li>
                         <a href="catalog.html">Каталог</a>
-                        <!-- Попап навигации -->
+                        <span class="visually-hidden">Категории каталога</span>
                         <ul class="site-navigation-popup">
                             <li class="new-item"><a href="#">Новинки</a></li>
-                            <li>Сливочное</a></li>
+                            <li><a>Сливочное</a></li>
                             <li><a href="#">Щербеты</a></li>
                             <li><a href="#">Фруктовый лед</a></li>
                             <li><a href="#">Мелонин</a></li>
@@ -25,23 +25,35 @@
                     <li><a href="#">Доставка и оплата</a></li>
                     <li><a href="#">О Компании</a></li>
                 </ul>
-                <div class="search-link">Поиск</div>
-                <div class="login-link">Вход</div>
-                <div class="basket-link">2 товара</div>
-                <!-- Черновая наметка попапа корзины -->
-                <div class="backet-link-popup">
+                <button class="search-btn">Поиск</button>
+                <span class="visually-hidden">Форма поиска</span>
+                <form class="search-btn-popup" name="search-form" id="search" action="https://echo.htmlacademy.ru" method="get">
+                    <label for="search" class=""visually-hidden">Что ищем?</label>
+                    <input type="search" name="input-searh" id="what-search" placeholder="Что ищем?"><button class="visually-hidden">Найти</button>
+                <button class="login-btn">Вход</button>
+                <form class="login-btn-popup" name="login-form" id="login" action="https://echo.htmlacademy.ru" method="post" >
+                    <label for="email" class="visually-hidden">Электронная почта</label>
+                    <input type="email" name="email" id="email" placeholder="Электронная почта" >
+                    <label for="pass" class="visually-hidden">Пароль</label>
+                    <input type="password" name="password" id="pass" placeholder="Пароль">
+                    <button class="btn">Войти</button>
+                    <a href="#">Забыли пароль?</a>
+                    <a href="#">Новая регистрация</a>
+                </form>
+                <button class="basket-btn">2 товара</button>
+                <div class="backet-btn-popup">
                     <table class="backet-table">
                         <caption class="visually-hidden">Товары в корзине</caption>
                         <tr>
                             <td><button class="basket-remove">Удалить</button></td>
-                            <td><img src="img\icon-ice-cream-1.png" width="33" height="33" alt="Пломбир с апельсиновым джемом"></td>
+                            <td><img src="img\icon-ice-cream-1.png" width="33" height="33" alt=" Морожнное пломбир с апельсиновым джемом фото"></td>
                             <td>Пломбир с апельсиновым джемом</td>
                             <td>1,5 кг х <span>200 руб.</span></td>
                             <td>300 руб.</td>
                         </tr>
                         <tr>
                             <td><button class="basket-remove">Удалить</button></td>
-                            <td><img src="img\icon-ice-cream-2.png" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
+                            <td><img src="img\icon-ice-cream-2.png" width="33" height="33" alt=" Мооженое клубничный пломбир с присыпкой из белого шоколада фото">
                             <td>Клубничный пломбир с присыпкой из белого шоколада</td>
                             <td>1,5 кг х <span>300 руб.</span></td>
                             <td>450 руб.</td>
@@ -55,14 +67,14 @@
                     </table>
                 </div>
             </nav>
-            <div class="header-phone">
+            <div class="header-phone" aria-label="Время работы и телефон">
                 <p class="header-phone-number">С 10 до 20, ежедневно
                     <a href="tel:88124502525">8 812 450-25-25</a>
                 </p>
             </div>
         </header>
         <main class="container">
-            <ul class="breadcrumbs">
+            <ul class="breadcrumbs" aria-label="Дополнительная навигация">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li class="breadcrumbs-current">Сливочное</li>
@@ -70,9 +82,8 @@
             <h1>Сливочное мороженое</h1>
             <section class="filters">
                 <h2 class="visually-hidden">Фильтр товаров</h2>
-                <!-- Черновик формы, еще не доделано -->
                 <div class="filters-form-wrap">
-                    <form name="filter" id="filter-id" action="" method="post">
+                    <form name="filter" id="filter-id" action="https://echo.htmlacademy.ru" method="post">
                         <fieldset>
                             <legend>Сортировка</legend>
                             <select name="filter-kind" id="kind">
@@ -88,25 +99,21 @@
                         </fieldset>
                         <fieldset>
                             <legend>Жирность</legend>
-                            <label>
-                            <input type="radio" name="option-fat" id="fat-0">0%</label>
-                            <label>
-                            <input type="radio" name="option-fat" id="fatless-10" checked>до 10%</label>
-                            <label>
-                            <input type="radio" name="option-fat" id="fatless-30">до 30%</label>
-                            <label>
-                            <input type="radio" name="option-fat" id="fatmore-30-">выше 30%</label>
+                            <ul>
+                                <li><label><input type="radio" name="option-fat" id="fat-0">0%</label></li>
+                                <li><label><input type="radio" name="option-fat" id="fatless-10" checked>до 10%</label></li>
+                                <li><label><input type="radio" name="option-fat" id="fatless-30">до 30%</label></li>
+                                <li><label> <input type="radio" name="option-fat" id="fatmore-30-">выше 30%</label></li>
+                            </ul>
                         </fieldset>
                         <fieldset>
                             <legend>Наполнители:</legend>
-                            <label>
-                            <input type="checkbox" name="option-filler" id="choco" checked>шоколадные</label>
-                            <label>
-                            <input type="checkbox" name="option-filler" id="filler-sugar" checked>сахарные посыпки</label>
-                            <label>
-                            <input type="checkbox" name="option-filler" id="filler-fruit">фрукты</label>
-                            <label>
-                            <input type="checkbox" name="option-filler" id="filler-sirup">сиропы</label>
+                            <ul>
+                                <li><label><input type="checkbox" name="option-filler" id="choco" checked>шоколадные</label></li>
+                                <li><label><input type="checkbox" name="option-filler" id="filler-sugar" checked>сахарные посыпки</label></li>
+                                <li><label><input type="checkbox" name="option-filler" id="filler-fruit">фрукты</label></li>
+                                <li><label><input type="checkbox" name="option-filler" id="filler-sirup">сиропы</label></li>
+                            </ul>
                         </fieldset>
                         <button>Применить</button>
                     </form>
@@ -116,66 +123,78 @@
                 <h2 class="visually-hidden">Список видов сливочного мороженного</h2>
                 <ul class="catalog-list">
                     <li class="catalog-item">
-                        <img src="img\ice-cream-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                        <img src="img\ice-cream-1.jpg" width="267" height="267" alt=" Мороженое сливочное с апельсиновым джемом и цитрусовой стружкой фото">
                         <p class="catalog-item-price">310₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+                        <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                        <img src="img\goods\ice-cream-2.jpg" width="267" height="267" alt="Мороженое сливочно-кофейное с кусочками шоколада фото">
                         <p class="catalog-item-price">380₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title>">Сливочно-кофейное с кусочками шоколада</h3>
+                        <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                        <img src="img\goods\ice-cream-3.jpg" width="267" height="267" alt="Мороженое сливочно-клубничное с присыпкой из белого шоколада фото">
                         <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
+                        <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                        <img src="img\goods\ice-cream-4.jpg" width="267" height="267" alt="Мороженое сливочное крем-брюле с карамельной подливкой фото">
                         <p class="catalog-item-price">415₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
+                        <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
+                        <img src="img\goods\ice-cream-5.jpg" width="267" height="267" alt="Мороженое сливочное с брусничным джемом фото">
                         <p class="catalog-item-price">325₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с брусничным джемом</h3>
+                        <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+                        <img src="img\goods\ice-cream-6.jpg" width="267" height="267" alt="Мороженое сливочно-черничное с цельными ягодами черники фото">
                         <p class="catalog-item-price">410₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-черничное с цельными ягодами черники</h3>
+                        <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+                        <img src="img\goods\ice-cream-7.jpg" width="267" height="267" alt="Мороженое сливочно-лимонное с карамельной присыпкой фото">
                         <p class="catalog-item-price">375₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-лимонное с карамельной присыпкой</h3>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+                        <img src="img\goods\ice-cream-8.jpg" width="267" height="267" alt="Мороженое сливочное с шоколадной стружкой фото">
                         <p class="catalog-item-price">320₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с шоколадной стружкой</h3>
+                        <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+                        <img src="img\goods\ice-cream-9.jpg" width="267" height="267" alt="Мороженое сливочно-ванильное с кусочками шоколада фото">
                         <p class="catalog-item-price">440₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-ванильное с кусочками шоколада</h3>
+                        <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
+                        <img src="img\goods\ice-cream-10.jpg" width="267" height="267" alt="Мороженое сливочноe с ментоловым сиропом фото">
                         <p class="catalog-item-price">435₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочноe с ментоловым сиропом</h3>
+                        <a href="#" class="btn">Купить</a>
+                    </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+                        <img src="img\goods\ice-cream-11.jpg" width="267" height="267" alt="Мороженое сливочное с кусочками черного шоколада фото">
                         <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с кусочками черного шоколада</h3>
+                        <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
+                        <img src="img\goods\ice-cream-12.jpg" width="267" height="267" alt="Мороженое сливочное с мятным сиропом фото">
                         <p class="catalog-item-price">420₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с мятным сиропом</h3>
+                        <a href="#" class="btn">Купить</a>
                     </li>
                 </ul>
-                <!-- Переключатель страниц -->
-                <ul class="pagination-list">
+                <h2 class="visually-hidden">Переключатель страниц</h2>
+                <ul class="pagination-list" aria-label="Страницы">
                     <li class="pagination-item pagination-item-current"><a>1</a></li>
                     <li class="pagination-item"><a href="#">2</a></li>
                     <li class="pagination-item"><a href="#">3</a></li>
@@ -186,12 +205,12 @@
         <footer class="main-footer">
             <div class="footer-social">
                 <ul>
-                    <li><a class="social-button" href="#">Вконтакте</a></li>
-                    <li><a class="social-button" href="#">Фейсбук</a></li>
-                    <li><a class="social-button" href="#">Инстаграм</a></li>
+                    <li><a class="social-button" href="#" aria-label="Группа магазина Глейси в соцсети Вконтакте">Вконтакте</a></li>
+                    <li><a class="social-button" href="#" aria-label="Группа магазина Глейси в соцсети Фейсбук">Фейсбук</a></li>
+                    <li><a class="social-button" href="#" aria-label="Группа магазина Глейси в соцсети Инстаграм">Инстаграм</a></li>
                 </ul>
             </div>
-            <div class="about-us">
+            <div class="about-us" aria-label="Иная информация о нас">
                 <ul>
                     <li class="about-us-partners"><a href="#">Для поставщиков</a></li>
                     <li><a href="#">О производстве</a></li>
@@ -200,9 +219,9 @@
                 </ul>
             </div>
             <div class="footer-copyright">
-                <a class="logo-creators" href="https://htmlacademy.ru/intensive/htmlcss">
+                <a class="logo-creators" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1">
                 <img src="img\svg\logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy"></a>
-                <p>Сделано в <a class="link-creators" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>&#169; 2017</p>
+                <p>Сделано в <a class="link-creators" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1">HTML Academy</a>&#169; 2017</p>
             </div>
         </footer>
     </body>
