Исправлено в соответствии с замечаниями
Исправлены слеши в путях к картинкам. Исправлена форма поиска(закрыта, найдена и устранена ощибка в id подписи), исправлена корзина.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <header class="main-header">
             <nav class="main-navigation" aria-label="Главная навигация">
                 <a class="main-header-logo">
-                <img src="img\svg\logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
+                <img src="img/svg/logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
                 </a>
                 <ul class="site-navigation">
                     <li>
@@ -28,7 +28,7 @@
                 <button class="search-btn">Поиск</button>
                 <span class="visually-hidden">Форма поиска</span>
                 <form class="search-btn-popup" name="search-form" id="search" action="https://echo.htmlacademy.ru" method="get">
-                    <label for="search" class=""visually-hidden">Что ищем?</label>
+                    <label for="what-search" class="visually-hidden">Что ищем?</label>
                     <input type="search" name="input-searh" id="what-search" placeholder="Что ищем?"><button class="visually-hidden" type="submit">Найти</button>
                 </form>
                 <button class="login-btn">Вход</button>
@@ -42,7 +42,7 @@
                     <a href="#">Забыли пароль?</a>
                     <a href="#">Новая регистрация</a>
                 </form>
-                <div class="basket-link">Пусто</div>
+                <button class="basket-btn">Пусто</button>
             </nav>
             <div class="header-phone" aria-label="Время работы и телефон">
                 <p class="header-phone-number">С 10 до 20, ежедневно
@@ -55,7 +55,7 @@
             <section class="slider">
                 <h2 class="visually-hidden">Предложение</h2>
                 <div class="slide-offer">
-                    <img src="img\ice-cream-promo-1.png" width="647" height="584" alt="Крем-брюле и пломбир с малиновым джемом фото">
+                    <img src="img/ice-cream-promo-1.png" width="647" height="584" alt="Крем-брюле и пломбир с малиновым джемом фото">
                     <!-- При вставке картинки исправить размер -->
                     <p>Крем-брюле и пломбир с малиновым джемом</p>
                     <!-- предпологаемое место для переключателей слайдера, подписи для стилизации -->
@@ -87,7 +87,7 @@
                     <li class="best-item">
                         <p class="catalog-item-image">
                             <a href="catalog.html">
-                            <img src="img\goods\ice-cream-1.jpg" width="267" height="267" alt="Мороженое сливочное с апельсиновым джемом и цитрусовой стружкой фото">
+                            <img src="img/goods/ice-cream-1.jpg" width="267" height="267" alt="Мороженое сливочное с апельсиновым джемом и цитрусовой стружкой фото">
                             </a>
                         </p>
                         <p class="catalog-item-price">310₽<span class="weight">/кг</span></p>
@@ -100,7 +100,7 @@
                     <li class="best-item">
                         <p class="catalog-item-image">
                             <a href="catalog.html">
-                            <img src="img\goods\ice-cream-2.jpg" width="267" height="267" alt="Мороженое сливочно-кофейное с кусочками шоколада фото">
+                            <img src="img/goods/ice-cream-2.jpg" width="267" height="267" alt="Мороженое сливочно-кофейное с кусочками шоколада фото">
                             </a>
                         </p>
                         <p class="catalog-item-price">380₽<span class="weight">/кг</span></p>
@@ -113,7 +113,7 @@
                     <li class="best-item">
                         <p class="catalog-item-image">
                             <a href="catalog.html">
-                            <img src="img\goods\ice-cream-3.jpg" width="267" height="267" alt="Мороженое сливочно-клубничное с присыпкой из белого шоколада фото">
+                            <img src="img/goods/ice-cream-3.jpg" width="267" height="267" alt="Мороженое сливочно-клубничное с присыпкой из белого шоколада фото">
                             </a>
                         </p>
                         <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
@@ -126,7 +126,7 @@
                     <li class="best-item">
                         <p class="catalog-item-image">
                             <a href="catalog.html">
-                            <img src="img\goods\ice-cream-4.jpg" width="267" height="267" alt="Мороженое сливочное крем-брюле с карамельной подливкой фото">
+                            <img src="img/goods/ice-cream-4.jpg" width="267" height="267" alt="Мороженое сливочное крем-брюле с карамельной подливкой фото">
                             </a>
                         </p>
                         <p class="catalog-item-price">415₽<span class="weight">/кг</span></p>
@@ -179,7 +179,7 @@
             <section class="contacts">
                 <h2 class="visually-hidden">Адрес и телефон</h2>
                 <p class="map">
-                    <img src="img\map(temp).jpg" width="1200" height="430" alt="Карта, описывает местоположение магазина, адрес: ул. Большая Конюшенная 19/8, Санкт-Петербург">
+                    <img src="img/map(temp).jpg" width="1200" height="430" alt="Карта, описывает местоположение магазина, адрес: ул. Большая Конюшенная 19/8, Санкт-Петербург">
                 </p>
                 <div class="contacts-info" aria-label="Блок с информацией об адресе и телефоне">
                     <p>Адрес главного офиса и офлайн-магазина:
@@ -224,7 +224,7 @@
             </div>
             <div class="footer-copyright">
                 <a class="logo-creators" href="https://htmlacademy.ru/intensive/htmlcss">
-                <img src="img\svg\logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy"aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1" ></a>
+                <img src="img/svg/logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy" aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1" ></a>
                 <p>Сделано в <a class="link-creators" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1">HTML Academy</a>&#169; 2017</p>
             </div>
         </footer>
