--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
         <header class="main-header">
             <nav class="main-navigation" aria-label="Главная навигация">
                 <a class="main-header-logo" href="index.html">
-                <img src="img\svg\logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
+                <img src="img/svg/logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
                 </a>
                 <ul class="site-navigation">
                     <li>
@@ -28,9 +28,11 @@
                 <button class="search-btn">Поиск</button>
                 <span class="visually-hidden">Форма поиска</span>
                 <form class="search-btn-popup" name="search-form" id="search" action="https://echo.htmlacademy.ru" method="get">
-                    <label for="search" class=""visually-hidden">Что ищем?</label>
+                    <label for="what-search" class="visually-hidden">Что ищем?</label>
                     <input type="search" name="input-searh" id="what-search" placeholder="Что ищем?"><button class="visually-hidden">Найти</button>
+                </form>
                 <button class="login-btn">Вход</button>
+                <span class="visually-hidden">Форма входа</span>
                 <form class="login-btn-popup" name="login-form" id="login" action="https://echo.htmlacademy.ru" method="post" >
                     <label for="email" class="visually-hidden">Электронная почта</label>
                     <input type="email" name="email" id="email" placeholder="Электронная почта" >
@@ -40,20 +42,20 @@
                     <a href="#">Забыли пароль?</a>
                     <a href="#">Новая регистрация</a>
                 </form>
-                <button class="basket-btn">2 товара</button>
+                <button class="basket-btn not-empty">2 товара</button>
                 <div class="backet-btn-popup">
                     <table class="backet-table">
                         <caption class="visually-hidden">Товары в корзине</caption>
                         <tr>
                             <td><button class="basket-remove">Удалить</button></td>
-                            <td><img src="img\icon-ice-cream-1.png" width="33" height="33" alt=" Морожнное пломбир с апельсиновым джемом фото"></td>
+                            <td><img src="img/icon-ice-cream-1.png" width="33" height="33" alt="Мороженое пломбир с апельсиновым джемом фото"></td>
                             <td>Пломбир с апельсиновым джемом</td>
                             <td>1,5 кг х <span>200 руб.</span></td>
                             <td>300 руб.</td>
                         </tr>
                         <tr>
                             <td><button class="basket-remove">Удалить</button></td>
-                            <td><img src="img\icon-ice-cream-2.png" width="33" height="33" alt=" Мооженое клубничный пломбир с присыпкой из белого шоколада фото">
+                            <td><img src="img/icon-ice-cream-2.png" width="33" height="33" alt="Мороженое клубничный пломбир с присыпкой из белого шоколада фото">
                             <td>Клубничный пломбир с присыпкой из белого шоколада</td>
                             <td>1,5 кг х <span>300 руб.</span></td>
                             <td>450 руб.</td>
@@ -82,7 +84,6 @@
             <h1>Сливочное мороженое</h1>
             <section class="filters">
                 <h2 class="visually-hidden">Фильтр товаров</h2>
-                <div class="filters-form-wrap">
                     <form name="filter" id="filter-id" action="https://echo.htmlacademy.ru" method="post">
                         <fieldset>
                             <legend>Сортировка</legend>
@@ -103,7 +104,7 @@
                                 <li><label><input type="radio" name="option-fat" id="fat-0">0%</label></li>
                                 <li><label><input type="radio" name="option-fat" id="fatless-10" checked>до 10%</label></li>
                                 <li><label><input type="radio" name="option-fat" id="fatless-30">до 30%</label></li>
-                                <li><label> <input type="radio" name="option-fat" id="fatmore-30-">выше 30%</label></li>
+                                <li><label><input type="radio" name="option-fat" id="fatmore-30-">выше 30%</label></li>
                             </ul>
                         </fieldset>
                         <fieldset>
@@ -117,77 +118,76 @@
                         </fieldset>
                         <button>Применить</button>
                     </form>
-                </div>
             </section>
             <section class="catalog">
                 <h2 class="visually-hidden">Список видов сливочного мороженного</h2>
                 <ul class="catalog-list">
                     <li class="catalog-item">
-                        <img src="img\ice-cream-1.jpg" width="267" height="267" alt=" Мороженое сливочное с апельсиновым джемом и цитрусовой стружкой фото">
+                        <img src="img/ice-cream-1.jpg" width="267" height="267" alt="Мороженое сливочное с апельсиновым джемом и цитрусовой стружкой фото">
                         <p class="catalog-item-price">310₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
                         <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-2.jpg" width="267" height="267" alt="Мороженое сливочно-кофейное с кусочками шоколада фото">
+                        <img src="img/goods/ice-cream-2.jpg" width="267" height="267" alt="Мороженое сливочно-кофейное с кусочками шоколада фото">
                         <p class="catalog-item-price">380₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title>">Сливочно-кофейное с кусочками шоколада</h3>
                         <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-3.jpg" width="267" height="267" alt="Мороженое сливочно-клубничное с присыпкой из белого шоколада фото">
+                        <img src="img/goods/ice-cream-3.jpg" width="267" height="267" alt="Мороженое сливочно-клубничное с присыпкой из белого шоколада фото">
                         <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
                         <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-4.jpg" width="267" height="267" alt="Мороженое сливочное крем-брюле с карамельной подливкой фото">
+                        <img src="img/goods/ice-cream-4.jpg" width="267" height="267" alt="Мороженое сливочное крем-брюле с карамельной подливкой фото">
                         <p class="catalog-item-price">415₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
                         <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-5.jpg" width="267" height="267" alt="Мороженое сливочное с брусничным джемом фото">
+                        <img src="img/goods/ice-cream-5.jpg" width="267" height="267" alt="Мороженое сливочное с брусничным джемом фото">
                         <p class="catalog-item-price">325₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с брусничным джемом</h3>
                         <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-6.jpg" width="267" height="267" alt="Мороженое сливочно-черничное с цельными ягодами черники фото">
+                        <img src="img/goods/ice-cream-6.jpg" width="267" height="267" alt="Мороженое сливочно-черничное с цельными ягодами черники фото">
                         <p class="catalog-item-price">410₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-черничное с цельными ягодами черники</h3>
                         <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-7.jpg" width="267" height="267" alt="Мороженое сливочно-лимонное с карамельной присыпкой фото">
+                        <img src="img/goods/ice-cream-7.jpg" width="267" height="267" alt="Мороженое сливочно-лимонное с карамельной присыпкой фото">
                         <p class="catalog-item-price">375₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-лимонное с карамельной присыпкой</h3>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-8.jpg" width="267" height="267" alt="Мороженое сливочное с шоколадной стружкой фото">
+                        <img src="img/goods/ice-cream-8.jpg" width="267" height="267" alt="Мороженое сливочное с шоколадной стружкой фото">
                         <p class="catalog-item-price">320₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с шоколадной стружкой</h3>
                         <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-9.jpg" width="267" height="267" alt="Мороженое сливочно-ванильное с кусочками шоколада фото">
+                        <img src="img/goods/ice-cream-9.jpg" width="267" height="267" alt="Мороженое сливочно-ванильное с кусочками шоколада фото">
                         <p class="catalog-item-price">440₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-ванильное с кусочками шоколада</h3>
                         <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-10.jpg" width="267" height="267" alt="Мороженое сливочноe с ментоловым сиропом фото">
+                        <img src="img/goods/ice-cream-10.jpg" width="267" height="267" alt="Мороженое сливочноe с ментоловым сиропом фото">
                         <p class="catalog-item-price">435₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочноe с ментоловым сиропом</h3>
                         <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-11.jpg" width="267" height="267" alt="Мороженое сливочное с кусочками черного шоколада фото">
+                        <img src="img/goods/ice-cream-11.jpg" width="267" height="267" alt="Мороженое сливочное с кусочками черного шоколада фото">
                         <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с кусочками черного шоколада</h3>
                         <a href="#" class="btn">Купить</a>
                     </li>
                     <li class="catalog-item">
-                        <img src="img\goods\ice-cream-12.jpg" width="267" height="267" alt="Мороженое сливочное с мятным сиропом фото">
+                        <img src="img/goods/ice-cream-12.jpg" width="267" height="267" alt="Мороженое сливочное с мятным сиропом фото">
                         <p class="catalog-item-price">420₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с мятным сиропом</h3>
                         <a href="#" class="btn">Купить</a>
@@ -220,7 +220,7 @@
             </div>
             <div class="footer-copyright">
                 <a class="logo-creators" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1">
-                <img src="img\svg\logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy"></a>
+                <img src="img/svg/logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy"></a>
                 <p>Сделано в <a class="link-creators" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1">HTML Academy</a>&#169; 2017</p>
             </div>
         </footer>
