--- a/index.html
+++ b/index.html
@@ -3,35 +3,40 @@
     <head>
         <meta charset="utf-8">
         <title>HTML Academy: Глейси</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet" type="text/css">
+        <link href="css/normalize.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <header class="main-header">
             <nav class="main-navigation" aria-label="Главная навигация">
                 <a class="main-header-logo">
-                <img src="img/svg/logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
+                    <img src="img/svg/logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
                 </a>
                 <ul class="site-navigation">
                     <li>
-                        <a href="catalog.html">Каталог</a>
+                        <a href="catalog.html"><span>Каталог</span></a>
                         <span class="visually-hidden">Категории каталога</span>
-                        <ul class="site-navigation-popup">
+                        <div class="navigation-popup-wrap" >
+                        <ul class="navigation-popup">
                             <li class="new-item"><a href="#">Новинки</a></li>
                             <li><a href="catalog.html">Сливочное</a></li>
                             <li><a href="#">Щербеты</a></li>
                             <li><a href="#">Фруктовый лед</a></li>
                             <li><a href="#">Мелонин</a></li>
                         </ul>
+                    </div>
                     </li>
                     <li><a href="#">Доставка и оплата</a></li>
                     <li><a href="#">О Компании</a></li>
                 </ul>
-                <button class="search-btn">Поиск</button>
+                <button class="search-btn nav-btn">Поиск</button>
                 <span class="visually-hidden">Форма поиска</span>
                 <form class="search-btn-popup" name="search-form" id="search" action="https://echo.htmlacademy.ru" method="get">
                     <label for="what-search" class="visually-hidden">Что ищем?</label>
                     <input type="search" name="input-searh" id="what-search" placeholder="Что ищем?"><button class="visually-hidden" type="submit">Найти</button>
                 </form>
-                <button class="login-btn">Вход</button>
+                <button class="login-btn nav-btn">Вход</button>
                 <span class="visually-hidden">Форма входа</span>
                 <form class="login-btn-popup" name="login-form" id="login" action="https://echo.htmlacademy.ru" method="post" >
                     <label for="email" class="visually-hidden">Электронная почта</label>
@@ -42,7 +47,7 @@
                     <a href="#">Забыли пароль?</a>
                     <a href="#">Новая регистрация</a>
                 </form>
-                <button class="basket-btn">Пусто</button>
+                <button class="basket-btn nav-btn">Пусто</button>
             </nav>
             <div class="header-phone" aria-label="Время работы и телефон">
                 <p class="header-phone-number">С 10 до 20, ежедневно
@@ -65,20 +70,20 @@
                     <input type="radio" name="slide-offer-switch" id="btn2">
                     <label class="slide-offer-switch" for="btn3"></label>
                     <input type="radio" name="slide-offer-switch" id="btn3">
-                    <button class="btn-slider">Возьми оба!</button>
+                    <button class="btn btn-slider"><span>Давайте оба!</span></button>
                 </div>
             </section>
             <section class="promo">
                 <h2 class="visually-hidden">Акции</h2>
-                <div class="promo-offer raspberry-offer">
+                <div class="raspberry-offer">
                     <h3 class="title-offer">Малинка даром!</h3>
                     <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-                    <button class="btn-offer-raspberry">Хочу варенье!</button>
+                    <button class="btn btn-offer-raspberry">Хочу варенье!</button>
                 </div>
-                <div class="promo-offer chocolate-offer">
+                <div class="chocolate-offer">
                     <h3 class="title-offer">Шоколадки даром!</h3>
                     <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-                    <button class="btn-offer-chocolate">Хочу шоколадки!</button>
+                    <button class=" btn btn-offer-chocolate">Хочу шоколадки!</button>
                 </div>
             </section>
             <section class="best-sellers">
@@ -166,7 +171,7 @@
             </section>
             <article class="news-blog">
                 <h2>Новое в нашем блоге</h2>
-                <a href="https://glacy-blog.ru" class="artirle-title">10 способов сервировки фруктовых щербетов к столу</a>
+                <a href="#" class="artirle-title">10 способов сервировки фруктовых щербетов к столу</a>
             </article>
             <section class="subscribe">
                 <h2 class="visually-hidden">Подписка</h2>
@@ -174,58 +179,56 @@
                     что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
                 </p>
                 <!-- Место для формы  -->
-                <button class="btn-subscribe" type="submit">Отправить</button>
+                <label for="sub-email" class="visually-hidden">Электронная почта</label>
+                <input type="email" name="sub-email" id="sub-email" placeholder="Электронная почта" >
+                <button class="btn btn-subscribe" type="submit">Отправить</button>
             </section>
             <section class="contacts">
-                <h2 class="visually-hidden">Адрес и телефон</h2>
-                <p class="map">
-                    <img src="img/map(temp).jpg" width="1200" height="430" alt="Карта, описывает местоположение магазина, адрес: ул. Большая Конюшенная 19/8, Санкт-Петербург">
-                </p>
-                <div class="contacts-info" aria-label="Блок с информацией об адресе и телефоне">
-                    <p>Адрес главного офиса и офлайн-магазина:
-                        <span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
-                    </p>
-                    <p>Для заказов по телефону:
-                        <a href="tel:88124502525">8 812 450-25-25</a>
-                        (с 10 до 20 ежедневно)
-                    </p>
-                    <button class="feed-back-btn">Форма обратной связи</button>
-                    <!-- Попап обратной связи -->
-                    <form class="feed-back-popup" name="feed-back-form" id="back" action="https://echo.htmlacademy.ru" method="post">
-                        <h3 class="visually-hidden">Форма обратной связи</h3>
-                        <button class="feed-back-popup-close-btn">Закрыть</button>
-                        <strong>Мы обязательно вам ответим!</strong>
-                        <label for="name" class="visually-hidden">Имя</label>
-                        <input type="text" name="name" id="name" placeholder="Как вас зовут?">
-                        <label for="email-feed-back-id" class="visually-hidden">Ваша почта для ответа</label>
-                        <input type="email" name="email-feed-back" id="email-feed-back-id" placeholder="Ваша почта для ответа">
-                        <label for="text-feed" class="visually-hidden">Поле для сообщения</label>
-                        <textarea name="text-feed-back" id="text-feed" placeholder="Напишите что-нибудь"></textarea>
-                        <button class="btn" type="submit">Отправить</button>
-                    </form>
-                </div>
+                <p class="map"><img src="img/map(temp).jpg" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="1200" height="430"></p>
+                    <div class="contacts-info">
+                      <p>Адрес главного офиса и офлайн-магазина:
+                      <span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span></p>
+                      <p>Для заказов по телефону:
+                      <a href="tel:+78124502525">8 812 450-25-25</a>
+                      (с 10 до 20 ежедневно)</p>
+                      <a href="#" class="btn">Форма обратной связи</a>
+                    </div>
+                  </section>
+            <section class="feed-back-popup">
+                <h3 class="visually-hidden">Форма обратной связи</h3>
+                <form  name="feed-back-form" id="back" action="https://echo.htmlacademy.ru" method="post">
+                    <button class="feed-back-popup-close-btn">Закрыть</button>
+                    <strong>Мы обязательно вам ответим!</strong>
+                    <label for="name" class="visually-hidden">Имя</label>
+                    <input type="text" name="name" id="name" placeholder="Как вас зовут?">
+                    <label for="email-feed-back-id" class="visually-hidden">Ваша почта для ответа</label>
+                    <input type="email" name="email-feed-back" id="email-feed-back-id" placeholder="Ваша почта для ответа">
+                    <label for="text-feed" class="visually-hidden">Поле для сообщения</label>
+                    <textarea name="text-feed-back" id="text-feed" placeholder="Напишите что-нибудь"></textarea>
+                    <button class="btn" type="submit">Отправить</button>
+                </form>
             </section>
         </main>
         <footer class="main-footer">
             <div class="footer-social">
-                <ul>
+                <ul class="social-list">
                     <li><a class="social-button" href="#" aria-label="Группа магазина Глейси в соцсети Вконтакте">Вконтакте</a></li>
                     <li><a class="social-button" href="#" aria-label="Группа магазина Глейси в соцсети Фейсбук">Фейсбук</a></li>
                     <li><a class="social-button" href="#" aria-label="Группа магазина Глейси в соцсети Инстаграм">Инстаграм</a></li>
                 </ul>
             </div>
             <div class="about-us" aria-label="Иная информация о нас" >
-                <ul>
+                <ul class="about-us-list">
                     <li class="about-us-partners"><a href="#">Для поставщиков</a></li>
                     <li><a href="#">О производстве</a></li>
                     <li><a href="#">Наши документы</a></li>
                     <li><a href="#">Экологические стандарты</a></li>
                 </ul>
-            </div>
+            </di>
             <div class="footer-copyright">
                 <a class="logo-creators" href="https://htmlacademy.ru/intensive/htmlcss">
                 <img src="img/svg/logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy" aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1" ></a>
-                <p>Сделано в <a class="link-creators" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1">HTML Academy</a>&#169; 2017</p>
+                <p>Сделано в <a class="link-creators" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1">HTML Academy</a> &#169; 2017</p>
             </div>
         </footer>
     </body>
