Исправлены некоторые замечания по стилизации, строится сетка
Провежуточное изменение, построена часть сетки добавлен слайдер, заменена графика в слайдере.

--- a/catalog.html
+++ b/catalog.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <header class="main-header">
+            <div class="container">
             <nav class="main-navigation" aria-label="Главная навигация">
                 <a class="main-header-logo" href="index.html">
                     <img src="img/svg/logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
@@ -30,6 +31,7 @@
                     <li><a href="#">Доставка и оплата</a></li>
                     <li><a href="#">О Компании</a></li>
                 </ul>
+                <div class="nav-btn-wrap">
                 <button class="search-btn nav-btn">Поиск</button>
                 <span class="visually-hidden">Форма поиска</span>
                 <form class="search-btn-popup" name="search-form" id="search" action="https://echo.htmlacademy.ru" method="get">
@@ -73,12 +75,13 @@
                         </tr>
                     </table>
                 </div>
+            </div>
             </nav>
             <div class="header-phone" aria-label="Время работы и телефон">
-                <p class="header-phone-number">С 10 до 20, ежедневно
+                <span class="work-hours">С 10 до 20, ежедневно</span>
                     <a href="tel:88124502525">8 812 450-25-25</a>
-                </p>
             </div>
+        </div>
         </header>
         <main class="container">
             <ul class="breadcrumbs" aria-label="Дополнительная навигация">
