--- a/index.html
+++ b/index.html
@@ -8,28 +8,35 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+        <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+        <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+        <div class="site-wrapper">
+            <div class="container">
         <header class="main-header">
+            <div class="main-header-wrap">
             <nav class="main-navigation" aria-label="Главная навигация">
                 <a class="main-header-logo">
                     <img src="img/svg/logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
                 </a>
                 <ul class="site-navigation">
                     <li>
-                        <a href="catalog.html"><span>Каталог</span></a>
+                        <a href="catalog.html">Каталог</a>
                         <span class="visually-hidden">Категории каталога</span>
                         <div class="navigation-popup-wrap" >
-                        <ul class="navigation-popup">
-                            <li class="new-item"><a href="#">Новинки</a></li>
-                            <li><a href="catalog.html">Сливочное</a></li>
-                            <li><a href="#">Щербеты</a></li>
-                            <li><a href="#">Фруктовый лед</a></li>
-                            <li><a href="#">Мелонин</a></li>
-                        </ul>
-                    </div>
+                            <ul class="navigation-popup">
+                                <li class="new-item"><a href="#">Новинки</a></li>
+                                <li><a href="catalog.html">Сливочное</a></li>
+                                <li><a href="#">Щербеты</a></li>
+                                <li><a href="#">Фруктовый лед</a></li>
+                                <li><a href="#">Мелонин</a></li>
+                            </ul>
+                        </div>
                     </li>
                     <li><a href="#">Доставка и оплата</a></li>
                     <li><a href="#">О Компании</a></li>
                 </ul>
+                <div class="nav-btn-wrap">
                 <button class="search-btn nav-btn">Поиск</button>
                 <span class="visually-hidden">Форма поиска</span>
                 <form class="search-btn-popup" name="search-form" id="search" action="https://echo.htmlacademy.ru" method="get">
@@ -48,30 +55,45 @@
                     <a href="#">Новая регистрация</a>
                 </form>
                 <button class="basket-btn nav-btn">Пусто</button>
-            </nav>
-            <div class="header-phone" aria-label="Время работы и телефон">
-                <p class="header-phone-number">С 10 до 20, ежедневно
-                    <a href="tel:88124502525">8 812 450-25-25</a>
-                </p>
             </div>
+        </div>
+            </nav>
+             <div class="header-phone" aria-label="Время работы и телефон">
+                    <span class="header-phone-number">С 10 до 20, ежедневно</span>
+                        <a href="tel:88124502525">8 812 450-25-25</a>
+                </div>
         </header>
-        <main class="container">
-            <h1 class="visually-hidden">Магазин мороженого «Глейси»</h1>
+        <main>
+            <div class="container">
             <section class="slider">
+                <h1 class="visually-hidden">Магазин мороженого «Глейси»</h1>
                 <h2 class="visually-hidden">Предложение</h2>
                 <div class="slide-offer">
-                    <img src="img/ice-cream-promo-1.png" width="647" height="584" alt="Крем-брюле и пломбир с малиновым джемом фото">
-                    <!-- При вставке картинки исправить размер -->
-                    <p>Крем-брюле и пломбир с малиновым джемом</p>
-                    <!-- предпологаемое место для переключателей слайдера, подписи для стилизации -->
-                    <label class="slide-offer-switch" for="btn1"></label>
-                    <input type="radio" name="slide-offer-switch" id="btn1" checked>
-                    <label class="slide-offer-switch" for="btn2" ></label>
-                    <input type="radio" name="slide-offer-switch" id="btn2">
-                    <label class="slide-offer-switch" for="btn3"></label>
-                    <input type="radio" name="slide-offer-switch" id="btn3">
-                    <button class="btn btn-slider"><span>Давайте оба!</span></button>
-                </div>
+                    <div class="slider-controls">
+                        <label for="product-1">Первый</label>
+                        <label for="product-2">Второй</label>
+                        <label for="product-3">Третий</label>
+                    </div>
+                        <ul class="slider-list">
+                             <li class="slider-item slide" id="slide1">
+                                <h3 class="slide-title">
+                                    Крем-брюле и пломбир с малиновым джемом
+                                </h3>
+                                <a class="button slide-button" href="#">Давайте оба!</a>
+                             </li>
+                            <li class="slider-item slide" id="slide2">
+                                <h3 class="slide-title">
+                                    Шоколадный пломбир и лимонный сорбет
+                                </h3>
+                                <a class="button slide-button" href="#">Давайте оба!</a>
+                            </li>
+                            <li class="slider-item slide" id="slide3">
+                                <h3 class="slide-title">
+                                    Пломбир с помадкой и клубничный щербет
+                                </h3>
+                                <a class="btn btn-slider" href="#">Давайте оба!</a>
+                            </li>
+                        </ul>
             </section>
             <section class="promo">
                 <h2 class="visually-hidden">Акции</h2>
@@ -208,6 +230,7 @@
                     <button class="btn" type="submit">Отправить</button>
                 </form>
             </section>
+        </div>
         </main>
         <footer class="main-footer">
             <div class="footer-social">
@@ -224,12 +247,14 @@
                     <li><a href="#">Наши документы</a></li>
                     <li><a href="#">Экологические стандарты</a></li>
                 </ul>
-            </di>
+            </div>
             <div class="footer-copyright">
                 <a class="logo-creators" href="https://htmlacademy.ru/intensive/htmlcss">
                 <img src="img/svg/logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy" aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1" ></a>
                 <p>Сделано в <a class="link-creators" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Профессиональный онлайн‑курс HTML и CSS, уровень 1">HTML Academy</a> &#169; 2017</p>
             </div>
         </footer>
+    </div>
+</div>
     </body>
 </html>
