Правки замечаний по сеткам

--- a/catalog.html
+++ b/catalog.html
@@ -89,7 +89,7 @@
                         </div>
                 </div>
             </header>
-            <main class="container">
+            <main>
                 <ul class="breadcrumbs" aria-label="Дополнительная навигация">
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="catalog.html">Каталог</a></li>
@@ -218,10 +218,13 @@
                     </div>
                     <h2 class="visually-hidden">Переключатель страниц</h2>
                     <ul class="pagination-list" aria-label="Страницы">
+                        <li class="pagination-item prev disabled"><a href="#">Назад</a></li>
                         <li class="pagination-item pagination-item-current"><a>1</a></li>
                         <li class="pagination-item"><a href="#">2</a></li>
                         <li class="pagination-item"><a href="#">3</a></li>
                         <li class="pagination-item"><a href="#">4</a></li>
+                        <li class="pagination-item next"><a href="#">Вперед</a></li>
+
                     </ul>
                 </section>
             </main>
@@ -248,10 +251,7 @@
                             Academy</a>&#169; 2017</p>
                 </div>
             </footer>
-
-
         </div>
-
 </body>
 
 
