--- a/index.html
+++ b/index.html
@@ -162,11 +162,12 @@
                             </li>
                             <li class="best-item">
                                 <p class="catalog-item-image">
-                                    <a href="catalog.html">
+                                    <a  class="catalog-item-image" href="catalog.html">
                                         <img src="img/goods/ice-cream-4.jpg" width="267" height="267" alt="Мороженое сливочное крем-брюле с карамельной подливкой фото">
                                     </a>
                                 </p>
                                 <p class="catalog-item-price">415₽<span class="weight">/кг</span></p>
+                                
                                 <h3>
                                     <a href="catalog.html">
                                         <span class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</span>
@@ -177,8 +178,8 @@
                     </section>
                     <section class="features">
                         <h2 class="visually-hidden">Преимущества</h2>
-                        <b>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного
-                            производства на развес</b>
+                        <p>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного
+                            производства на развес</p>
                         <ul class="features-list">
                             <li class="feature-item-make">Все наше мороженое изготавливается на собственном
                                 производстве, с использованием современного оборудования и проверенных временем технологий.
